--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,14 @@ authors = [
 ]
 description = "sowing"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
     "Operating System :: OS Independent",
+]
+dependencies = [
+    "immutables",
 ]
 
 [project.urls]
